syntax = "proto3";

option go_package = "github.com/george-e-shaw-iv/outflux/internal/grpc";

// DataPoint represents a singular data point for InfluxDB. This format is
// basically copied from the InfluxDB Line Protocol format. Documentation for
// that format can be found here:
//  https://docs.influxdata.com/influxdb/v2.2/reference/syntax/line-protocol/
message DataPoint {
  string Measurement = 1;
  repeated string Tags = 2;
  repeated string Fields = 3;
  uint64 Timestamp = 4;
}

// SyncRequest contains an array of data points meant to be synced from the
// client into the server.
message SyncRequest {
  repeated DataPoint DataPoints = 1;
}

// SyncResponse contains a list of integers that point back to data points
// given in SyncRequest that failed to sync with the server and will need
// to be resent again.
message SyncResponse {
  repeated uint32 Failed = 1;
}

service Outflux {
  rpc Sync(SyncRequest) returns (SyncResponse);
}
